<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffd5d5"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtRequestName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_request_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtRequestDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_request_description" />

    <EditText
        android:id="@+id/txtHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:hint="@string/height" />

    <EditText
        android:id="@+id/txtWaist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/waist" />

    <EditText
        android:id="@+id/txtBust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bust" />

    <Button
        android:id="@+id/btnSaveRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/signup_button"
        android:textColor="#ffffff"
        android:text="@android:string/ok" />

    <ListView
        android:id="@+id/requestsList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="#800000"
        android:dividerHeight="2dp" >
    </ListView>

</LinearLayout>