<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/site_bg_maroon"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fashion.zillah.MainActivity" >

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_alignRight="@+id/txtUsername"
        android:layout_below="@+id/txtPass"
        android:layout_marginTop="22dp"
        android:background="@drawable/login_button"
        android:onClick="userSignin"
        android:text="@string/signin"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSignin"
        android:layout_alignRight="@+id/btnSignin"
        android:layout_below="@+id/btnSignin"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button"
        android:onClick="createAccountActivity"
        android:text="@string/create_account"
        android:textStyle="bold" />


    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/designerRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/designer"
            android:textColor="#ffffff" />

        <RadioButton
            android:id="@+id/clientRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client"
            android:textColor="#ffffff" />
    </RadioGroup>

</RelativeLayout>