<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_client_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_client_id"
            android:textColor="#800000"
            android:textStyle="bold" />

        <TextView 
            android:id="@+id/txt_client_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#800000"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_client_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_designer_firstname"
            android:textColor="#800000"
            android:textStyle="bold" />

        <TextView 
            android:id="@+id/txt_client_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#800000"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_client_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_designer_lastname"
            android:textColor="#800000"
            android:textStyle="bold" />

        <TextView 
            android:id="@+id/txt_client_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#800000"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRo41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_client_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_designer_contact"
            android:textColor="#800000"
            android:textStyle="bold" />

        <TextView 
            android:id="@+id/txt_client_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#800000"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_client_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_designer_location"
            android:textColor="#800000"
            android:textStyle="bold" />

        <TextView 
            android:id="@+id/txt_client_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#800000"/>
    </TableRow>

</TableLayout>