<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_design_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_new_design_id"
            android:textColor="#800000"
            android:textStyle="bold" />

        <TextView 
            android:id="@+id/txt_design_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#800000"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_design_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_new_design_name"
            android:textColor="#800000"
            android:textStyle="bold" />

        <TextView 
            android:id="@+id/txt_design_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#800000"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_design_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_new_design_price"
            android:textColor="#800000"
            android:textStyle="bold" />

        <TextView 
            android:id="@+id/txt_design_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#800000"/>
    </TableRow>
    

</TableLayout>